kubernetes/traefik/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      # Aqui montamos el configmap en un volumen en la imagen. Kube
      # nos deja hacer eso y no tenemos que meternos con el build de la imagen
      volumes:
      - name: config
        configMap:
          name: traefik-conf
      containers:
        - name: traefik
          image: traefik:v2.3
          volumeMounts:
          - mountPath: "/config"
            name: config
          args:
            # Esto dice que puedes entrar al dashbaord sin seguiridad
            # en el puerto 8080
            - --api.insecure

            # Para activar ver quien entra
            - --api=true
            - --api.dashboard=true
            - --accesslog

            # The entrypoints should be dynamically assigned in the service
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443

            # Le dice al programa de traefik que usa kuber
            - --providers.kubernetescrd

            # Dynamic configuration file that has to be mounted in the image
            - --providers.file.directory=/config

            # Esta es la parte para hacer tls con Let's encrypt
            - --certificatesresolvers.default.acme.tlschallenge
            - --certificatesresolvers.default.acme.email=netopaas@gmail.com
            - --certificatesresolvers.default.acme.storage=acme.json

            # Tracing
            # - --tracing.jaeger=true

            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            # - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
